force-app/main/default/objects/pse__Proj__c/pse__Proj__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ProjectHelp</customHelpPage>
    <description>Represents a collection of business transactions, activities, and related items to be managed over a defined time range, such as timecards, expenses, milestones, and budgets. Typically, people (represented by Resource records) are assigned to projects, though some projects do not require assignments in order to be staffed. Projects may also have a master project (parent) or a sub project (child) in the project hierarchy, supporting roll-ups of revenues, costs, and time to every project and up through the hierarchy.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>