force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_Baseline_Budget__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_Baseline_Budget__c</fullName>
    <description>Sum of all assignment&apos;s planned hours multiplied by assignment&apos;s bill rate (active projects).</description>
    <inlineHelpText>Sum of all assignment&apos;s planned hours multiplied by assignment&apos;s bill rate (active projects).</inlineHelpText>
    <label>ACTIVE_Baseline Budget T&amp;M ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>