force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_JTD_Billable_CS__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_JTD_Billable_CS__c</fullName>
    <label>ACTIVE_JTD Billable CS ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>