force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_JTD_Billable_NB_Cost__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_JTD_Billable_NB_Cost__c</fullName>
    <description>Sum of all assignment&apos;s Job to Date (Cost) on active projects</description>
    <inlineHelpText>Sum of all assignment&apos;s Job to Date (Cost) on active projects</inlineHelpText>
    <label>ACTIVE_JTD Billable &amp; NB (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>