force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_JTD_Billable_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_JTD_Billable_NB_Hours__c</fullName>
    <description>Sum of all approved nonbill and billable hours logged (active project)</description>
    <inlineHelpText>Sum of all approved nonbill and billable hours logged (active project)</inlineHelpText>
    <label>ACTIVE_JTD Billable &amp; NB (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>