force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_JTD_Nonbill_Hours__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_JTD_Nonbill_Hours__c</fullName>
    <description>Sum of all approved nonbill hours logged (active projects).</description>
    <inlineHelpText>Sum of all approved nonbill hours logged (active projects).</inlineHelpText>
    <label>ACTIVE_JTD Nonbill (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>