force-app/main/default/objects/pse__Proj__c/fields/Active_of_Risks__c.field-meta.xml
<CustomField>
    <fullName>Active_of_Risks__c</fullName>
    <inlineHelpText>This field totals all the Risks logged against this project that are Not Equal to Mitigated</inlineHelpText>
    <label>Active # of Risks</label>
    <summaryFilterItems>
        <field>Risks_Issues__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Mitigated</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Risks_Issues__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Risk</value>
    </summaryFilterItems>
    <summaryForeignKey>Risks_Issues__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>