force-app/main/default/objects/pse__Proj__c/fields/ACTIVE_SOW_Budget__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_SOW_Budget__c</fullName>
    <description>Sum of all project budgets (active projects).</description>
    <inlineHelpText>Sum of all project budgets (active projects).</inlineHelpText>
    <label>ACTIVE_SOW Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>