force-app/main/default/objects/pse__Proj__c/fields/AutomaticallyCreateAssignment__c.field-meta.xml
<CustomField>
    <fullName>AutomaticallyCreateAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically create assignment for internal projects</description>
    <inlineHelpText>Automatically create assignment for internal projects</inlineHelpText>
    <label>Automatically Create Assignment</label>
    <type>Checkbox</type>
</CustomField>