force-app/main/default/objects/pse__Proj__c/fields/Baseline_Budget__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Budget__c</fullName>
    <description>Sum of all Assignment&apos;s Baseline Budget (Bill Rate * Planned Hours)</description>
    <formula>IF( Opp_Project_Type__c = &quot;Customer Success&quot;,(  ACTIVE_Baseline_Budget_CS__c +  CLOSED_Baseline_Budget_CS__c ),(ACTIVE_Baseline_Budget__c+CLOSED_Baseline_Budget__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all Assignment&apos;s Baseline Budget (Bill Rate * Planned Hours)</inlineHelpText>
    <label>Baseline Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>