force-app/main/default/objects/pse__Proj__c/fields/Baseline_Budget_Billable_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Budget_Billable_NB_Hours__c</fullName>
    <description>Sum of all assignment&apos;s billable and nonbillable planned hours</description>
    <formula>Baseline_Budget_Hours__c+Baseline_Budget_NB_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all assignment&apos;s billable and nonbillable planned hours</inlineHelpText>
    <label>Baseline Billable &amp; NB (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>