force-app/main/default/objects/pse__Proj__c/fields/Baseline_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Budget_Hours__c</fullName>
    <description>Sum of Assignment&apos;s Billable Planned Hours</description>
    <formula>ACTIVE_Baseline_Budget_Hours__c+CLOSED_Baseline_Budget_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Assignment&apos;s Billable Planned Hours</inlineHelpText>
    <label>Baseline Budget (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>