force-app/main/default/objects/pse__Proj__c/fields/Budget_tracker__c.field-meta.xml
<CustomField>
    <fullName>Budget_tracker__c</fullName>
    <label>Budget tracker</label>
    <type>Url</type>
</CustomField>