force-app/main/default/objects/pse__Proj__c/fields/Budget_Variance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance__c</fullName>
    <description>Projected over/under of budget spend using the calculation - Estimate at Complete ($) - SOW Budget ($)</description>
    <formula>EAC_Billable__c-SOW_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimate at Complete ($) - SOW Budget ($)</inlineHelpText>
    <label>Budget Variance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>