force-app/main/default/objects/pse__Proj__c/fields/Budget_Variance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance_Hours__c</fullName>
    <description>Projected over/under of budget hours used using the calculation - Estimate at Complete (Hours) - Baseline Budget (Hours)</description>
    <formula>EAC_Billable_Hours__c-Baseline_Budget_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimate at Complete (Hours) - Baseline Budget (Hours)</inlineHelpText>
    <label>Budget Variance (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>