force-app/main/default/objects/pse__Proj__c/fields/CLOSED_Baseline_Budget__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_Baseline_Budget__c</fullName>
    <description>Sum of all assignment&apos;s planned hours multiplied by assignment&apos;s bill rate (closed projects).</description>
    <inlineHelpText>Sum of all assignment&apos;s planned hours multiplied by assignment&apos;s bill rate (closed projects).</inlineHelpText>
    <label>CLOSED_Baseline Budget T&amp;M ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>