force-app/main/default/objects/pse__Proj__c/fields/CLOSED_Baseline_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_Baseline_Budget_Hours__c</fullName>
    <description>Sum of all assignment&apos;s billable planned hours (closed projects).</description>
    <inlineHelpText>Sum of all assignment&apos;s billable planned hours (closed projects).</inlineHelpText>
    <label>CLOSED_Baseline Budget (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>