force-app/main/default/objects/pse__Proj__c/fields/CLOSED_Baseline_Budget_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_Baseline_Budget_NB_Hours__c</fullName>
    <description>Sum of Assignment&apos;s nonbill Planned Hours (closed projects)</description>
    <inlineHelpText>Sum of Assignment&apos;s nonbill Planned Hours (closed projects)</inlineHelpText>
    <label>CLOSED_Baseline Budget NB (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>