force-app/main/default/objects/pse__Proj__c/fields/CLOSED_JTD_Billable__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_JTD_Billable__c</fullName>
    <description>Sum of approved billable hours multiplied by Assignment&apos;s bill rate. Calculated from the Resource&apos;s timecards (closed projects).</description>
    <inlineHelpText>Sum of approved billable hours multiplied by Assignment&apos;s bill rate. Calculated from the Resource&apos;s timecards (closed projects).</inlineHelpText>
    <label>CLOSED_JTD Billable T&amp;M ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>