force-app/main/default/objects/pse__Proj__c/fields/CLOSED_JTD_Billable_CS__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_JTD_Billable_CS__c</fullName>
    <label>CLOSED_JTD Billable CS ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>