force-app/main/default/objects/pse__Proj__c/fields/CLOSED_JTD_Billable_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_JTD_Billable_NB_Hours__c</fullName>
    <description>Sum of all approved nonbill and billable hours logged (closed project)</description>
    <inlineHelpText>Sum of all approved nonbill and billable hours logged (closed project)</inlineHelpText>
    <label>CLOSED_JTD Billable &amp; NB (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>