force-app/main/default/objects/pse__Proj__c/fields/CLOSED_SOW_Budget__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_SOW_Budget__c</fullName>
    <description>Sum of all project budgets (closed projects).</description>
    <inlineHelpText>Sum of all project budgets (closed projects).</inlineHelpText>
    <label>CLOSED_SOW Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>