force-app/main/default/objects/pse__Proj__c/fields/Copado_Project__c.field-meta.xml
<CustomField>
    <fullName>Copado_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this project is using Copado and a Copado project record should be created</description>
    <inlineHelpText>Indicates this project is using Copado and a Copado project record should be created</inlineHelpText>
    <label>Copado Project</label>
    <type>Checkbox</type>
</CustomField>