force-app/main/default/objects/pse__Proj__c/fields/Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Status__c</fullName>
    <description>Red/Yellow/Green status for coverage model</description>
    <label>Coverage Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>