force-app/main/default/objects/pse__Proj__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <label>CSAT Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>