force-app/main/default/objects/pse__Proj__c/fields/CSAT_Status__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Status__c</fullName>
    <label>CSAT Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>