force-app/main/default/objects/pse__Proj__c/fields/DevOps_Status__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Status__c</fullName>
    <description>Red/Yellow/Green status for DevOps risks &amp; Issues records</description>
    <label>DevOps Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>