force-app/main/default/objects/pse__Proj__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>Services discount percentage</description>
    <inlineHelpText>Services discount percentage</inlineHelpText>
    <label>Discount Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>