force-app/main/default/objects/pse__Proj__c/fields/EAC_Billable__c.field-meta.xml
<CustomField>
    <fullName>EAC_Billable__c</fullName>
    <description>Estimate of total amount spent at project completion using the calculation - JTD Billable ($) + ETC Billable ($)</description>
    <formula>JTD_Billable__c+  ETC_Billable_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>JTD Billable ($) + ETC Billable ($)</inlineHelpText>
    <label>EAC Billable ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>