force-app/main/default/objects/pse__Proj__c/fields/EAC_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>EAC_Billable_Hours__c</fullName>
    <description>Estimate of total hours logged at project completion using the calculation - JTD Billable (Hours) + ETC Billable (Hours)</description>
    <formula>JTD_Billable_Hours__c + ETC_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>JTD Billable (Hours) + ETC Billable (Hours)</inlineHelpText>
    <label>EAC Billable (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>