force-app/main/default/objects/pse__Proj__c/fields/EAC_Billable_NB_Cost__c.field-meta.xml
<CustomField>
    <fullName>EAC_Billable_NB_Cost__c</fullName>
    <description>ETC Billable &amp; NB (Cost) + JTD Billable &amp; NB (Cost)</description>
    <formula>ETC_Billable_NB_Cost_del__c+JTD_Billable_NB_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ETC Billable &amp; NB (Cost) + JTD Billable &amp; NB (Cost)</inlineHelpText>
    <label>EAC Billable &amp; NB (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>