force-app/main/default/objects/pse__Proj__c/fields/EAC_Billable_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>EAC_Billable_NB_Hours__c</fullName>
    <description>ETC Billable &amp; NB (Hours) + JTD Billable &amp; NB (Hours)</description>
    <formula>ETC_Billable_NB_Hours__c+JTD_Billable_NB_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ETC Billable &amp; NB (Hours) + JTD Billable &amp; NB (Hours)</inlineHelpText>
    <label>EAC Billable &amp; NB (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>