force-app/main/default/objects/pse__Proj__c/fields/EAC_Nonbill_Hours__c.field-meta.xml
<CustomField>
    <fullName>EAC_Nonbill_Hours__c</fullName>
    <description>ETC Nonbill (Hours) + JTD Nonbill (Hours)</description>
    <formula>ETC_Nonbill_Hours__c+JTD_Nonbill_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ETC Nonbill (Hours) + JTD Nonbill (Hours)</inlineHelpText>
    <label>EAC Nonbill (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>