force-app/main/default/objects/pse__Proj__c/fields/ETC_Billable_CS__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billable_CS__c</fullName>
    <label>ETC Billable CS ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>