force-app/main/default/objects/pse__Proj__c/fields/ETC_Billable_NB_Cost_del__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billable_NB_Cost_del__c</fullName>
    <description>Sum of all assignment&apos;s Estimate to Complete (Cost)</description>
    <inlineHelpText>Sum of all assignment&apos;s Estimate to Complete (Cost)</inlineHelpText>
    <label>ETC Billable &amp; NB (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>