force-app/main/default/objects/pse__Proj__c/fields/ETC_Billable_NB_Hours__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billable_NB_Hours__c</fullName>
    <description>Sum of all forecasted hours for billable &amp; nonbill assignments (current week forward). Populated from the field &quot;Total Scheduled Hours&quot; on all Est vs Actuals records where Time Period = Week.</description>
    <inlineHelpText>Sum of all forecasted hours for billable &amp; nonbill assignments (current week forward)</inlineHelpText>
    <label>ETC Billable &amp; NB (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>