force-app/main/default/objects/pse__Proj__c/fields/ETC_Billable_OLD_DNU__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billable_OLD_DNU__c</fullName>
    <description>Billable forecasted hours multiplied by Assignment&apos;s bill rate (current week forward). Populated  from the field &quot;Scheduled Hours ($)&quot; on all Est vs Actuals records where Time Period = Week.</description>
    <inlineHelpText>Billable forecasted hours multiplied by Assignment&apos;s bill rate (current week forward).</inlineHelpText>
    <label>ETC Billable ($) - OLD DNU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>