force-app/main/default/objects/pse__Proj__c/fields/ETC_Billable_TM__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billable_TM__c</fullName>
    <label>ETC Billable T&amp;M ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>