force-app/main/default/objects/pse__Proj__c/fields/Executive_Governed__c.field-meta.xml
<CustomField>
    <fullName>Executive_Governed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates an executive governed project (can be set from updating the Executive Governed flag on opportunity or can be checked on the project)</description>
    <inlineHelpText>Indicates an executive governed project (can be set from updating the Executive Governed flag on opportunity or can be checked on the project)</inlineHelpText>
    <label>Executive Governed</label>
    <type>Checkbox</type>
</CustomField>