force-app/main/default/objects/pse__Proj__c/fields/Executive_Steering_Status__c.field-meta.xml
<CustomField>
    <fullName>Executive_Steering_Status__c</fullName>
    <label>Executive Steering Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>