force-app/main/default/objects/pse__Proj__c/fields/ffps_7summits__Exclude_from_Scheduled_Versioning__c.field-meta.xml
<CustomField>
    <fullName>ffps_7summits__Exclude_from_Scheduled_Versioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Scheduled Versioning</label>
    <type>Checkbox</type>
</CustomField>