force-app/main/default/objects/pse__Proj__c/fields/ffps_7summits__Weeks_Pushed__c.field-meta.xml
<CustomField>
    <fullName>ffps_7summits__Weeks_Pushed__c</fullName>
    <label># of Weeks Pushed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Weeks</fullName>
            </value>
            <value>
                <fullName>4 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>-1 Week</fullName>
            </value>
            <value>
                <fullName>-2 Weeks</fullName>
            </value>
            <value>
                <fullName>-3 Weeks</fullName>
            </value>
            <value>
                <fullName>-4 Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>