force-app/main/default/objects/pse__Proj__c/fields/Forecast_report__c.field-meta.xml
<CustomField>
    <fullName>Forecast_report__c</fullName>
    <label>Forecast report</label>
    <type>Url</type>
</CustomField>