force-app/main/default/objects/pse__Proj__c/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <description>Red/Yellow/Green status for forecasts based on risks &amp; issues</description>
    <label>Forecast Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>