force-app/main/default/objects/pse__Proj__c/fields/Gross_Budget__c.field-meta.xml
<CustomField>
    <fullName>Gross_Budget__c</fullName>
    <description>Pre discount amount of the opportunity</description>
    <inlineHelpText>Pre discount amount of the opportunity</inlineHelpText>
    <label>Gross Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>