force-app/main/default/objects/pse__Proj__c/fields/IBM_Synergy__c.field-meta.xml
<CustomField>
    <fullName>IBM_Synergy__c</fullName>
    <formula>pse__Opportunity__r.IBM_Synergy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBM Synergy</label>
    <type>Checkbox</type>
</CustomField>