force-app/main/default/objects/pse__Proj__c/fields/InitiateCoverage__c.field-meta.xml
<CustomField>
    <fullName>InitiateCoverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Coverage</label>
    <type>Checkbox</type>
</CustomField>