force-app/main/default/objects/pse__Proj__c/fields/IP_Installation_URL__c.field-meta.xml
<CustomField>
    <fullName>IP_Installation_URL__c</fullName>
    <formula>pse__Opportunity__r.IP_Installation_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Installation URL</label>
    <type>Text</type>
</CustomField>