force-app/main/default/objects/pse__Proj__c/fields/JTD_Billable__c.field-meta.xml
<CustomField>
    <fullName>JTD_Billable__c</fullName>
    <description>Sum of Assignment&apos;s Total Billable Amount from approved timecards</description>
    <formula>IF( Opp_Project_Type__c = &quot;Customer Success&quot;,( ACTIVE_JTD_Billable_CS__c + CLOSED_JTD_Billable_CS__c ),(ACTIVE_JTD_Billable__c+CLOSED_JTD_Billable__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Assignment&apos;s Total Billable Amount from approved timecards</inlineHelpText>
    <label>JTD Billable ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>