force-app/main/default/objects/pse__Proj__c/fields/JTD_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>JTD_Billable_Hours__c</fullName>
    <description>Sum of Assignment&apos;s approved billable hours logged</description>
    <formula>ACTIVE_JTD_Billable_Hours__c+CLOSED_JTD_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Assignment&apos;s approved billable hours logged</inlineHelpText>
    <label>JTD Billable (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>