force-app/main/default/objects/pse__Proj__c/fields/JTD_Billable_NB_Cost__c.field-meta.xml
<CustomField>
    <fullName>JTD_Billable_NB_Cost__c</fullName>
    <description>Sum of Assignment&apos;s JTD Cost (JTD Hours * Default Cost Rate)</description>
    <formula>ACTIVE_JTD_Billable_NB_Cost__c+CLOSED_JTD_Billable_NB_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Assignment&apos;s JTD Cost (JTD Hours * Default Cost Rate)</inlineHelpText>
    <label>JTD Billable &amp; NB (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>