force-app/main/default/objects/pse__Proj__c/fields/Link_to_Final_Executed_SOW_PDF__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Final_Executed_SOW_PDF__c</fullName>
    <formula>pse__Opportunity__r.Link_to_Final_Executed_SOW_PDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Final Executed SOW (PDF)</label>
    <type>Text</type>
</CustomField>